--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 @font-face {
     font-family: "Poppins";
-    src: url("../src/assets/fonts/Poppins-Regular.ttf");
+    src: url("../src/assets/fonts/Poppins-Regular.ttf") format("ttf");
 }
