finished basic mobile css design

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
 
 @font-face {
     font-family: "Poppins-Bold-Italic";
-    src: url("../src/assets/fonts/Poppins-ExtraBoldItalic.ttf") format("ttf");
+    src: url("../src/assets/fonts/Poppins-ExtraBoldItalic.ttf");
 }
