handle form submit errors

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@
     font-family: "Poppins-Bold-Italic";
     src: url("../src/assets/fonts/Poppins-ExtraBoldItalic.ttf");
 }
+
+@font-face {
+    font-family: "Poppins-Italic";
+    src: url("../src/assets/fonts/Poppins-Italic.ttf");
+}
